--- a/frontend/app/styles/base.scss
+++ b/frontend/app/styles/base.scss
@@ -14,6 +14,7 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: subpixel-antialiased;
   color: $black;
+  user-select:none;
 }
 
 h1, h2, h3 {
