--- a/frontend/app/styles/base.scss
+++ b/frontend/app/styles/base.scss
@@ -14,7 +14,10 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: subpixel-antialiased;
   color: $black;
-  user-select:none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 h1, h2, h3 {
