--- a/frontend/app/pages/track/index/channel_details.scss
+++ b/frontend/app/pages/track/index/channel_details.scss
@@ -2,6 +2,7 @@
 
 .channel_details_container {
   padding: 15px 25px;
+  border-bottom: 1px solid $strokeColor;
 
   .channel_details_header {
     display: flex;
