--- a/frontend/app/pages/track/index/channel.scss
+++ b/frontend/app/pages/track/index/channel.scss
@@ -4,6 +4,7 @@ $channelHeight: 80px;
 
 .channel_container {
   border-bottom: 1px solid $strokeColor;
+  border-top: 1px solid $strokeColor;
   height: $channelHeight;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -11,6 +12,9 @@ $channelHeight: 80px;
   user-select: none;
   position: relative;
   box-shadow:  0px 0px 30px 0px rgba($black, 0);
+  background: $white;
+  z-index: 1;
+  margin-top: -1px;
 
   .channel_top_container {
     height: $channelHeight;
